--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.2",
     "element-ui": "^2.15.12",
     "vue": "^2.6.14",
     "vue-cookies": "^1.8.3",
+    "vue-echarts": "^6.5.5",
     "vue-router": "^3.6.5"
   },
   "devDependencies": {
