--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.6.14",
     "vue-cookies": "^1.8.3",
     "vue-echarts": "^6.5.5",
-    "vue-router": "^3.6.5"
+    "vue-router": "^3.6.5",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
