--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "echarts": "^5.4.2",
     "element-ui": "^2.15.12",
+    "mavon-editor": "^2.10.4",
     "vue": "^2.6.14",
     "vue-cookies": "^1.8.3",
     "vue-echarts": "^6.5.5",
